--- a/blog.html
+++ b/blog.html
@@ -240,6 +240,8 @@
             <div class="footer-footer">
                 <p class="tiny">Livro de Reclamações WhoCares disponível <b><a
                             href="https://www.livroreclamacoes.pt/Inicio/" target="_blank">aqui.</a></b></p>
+                <p class="tiny">Ilustração adaptada do trabalho de Tania Yakunova.
+        </p>
                 <p class="tiny">Website por <b><a href="https://anacatarinaloles.pt" target="_blank">Ana Catarina
                             Lopes</a></b>
                 </p>
