--- a/blog.html
+++ b/blog.html
@@ -192,7 +192,7 @@
                 <div class="navbar-logo showMobile" id="navbar-logo">
                     <a class="logo" href="#hero">Who Cares</a>
                 </div>
-                <h1>Care to care.</h1>
+                <h1 class="hideMobile">Care to care.</h1>
                 <a class="button button-pink-1 hideOnMobile hideOnTablet" href="blog.html">Visita a nossa Newsletter</a>
             </div>
             <div class="stroke"></div> <!--linha que separa secções do footer-->
@@ -240,8 +240,6 @@
             <div class="footer-footer">
                 <p class="tiny">Livro de Reclamações WhoCares disponível <b><a
                             href="https://www.livroreclamacoes.pt/Inicio/" target="_blank">aqui.</a></b></p>
-                <p class="tiny">Ilustração adaptada do trabalho de Tania Yakunova.
-        </p>
                 <p class="tiny">Website por <b><a href="https://anacatarinaloles.pt" target="_blank">Ana Catarina
                             Lopes</a></b>
                 </p>
