--- a/index.html
+++ b/index.html
@@ -1107,11 +1107,11 @@
         <div class="navbar-logo showMobile" id="navbar-logo">
           <a class="logo" href="#hero">Who Cares</a>
         </div>
-        <h1>Care to care.</h1>
+        <h1 class="hideMobile">Care to care.</h1>
         <a class="button button-pink-1 hideOnMobile hideOnTablet" href="blog.html">Visita a nossa Newsletter</a>
       </div>
       <div class="stroke"></div> <!--linha que separa secções do footer-->
-      <div class="footer-bottom">
+      <div class="footer-bottom ">
         <div class="navbar-logo hideMobile" id="navbar-logo">
           <a class="logo" href="#hero">Who Cares</a>
         </div>
@@ -1152,7 +1152,7 @@
             -->
         </div>
       </div>
-      <div class="footer-footer hideMobile">
+      <div class="footer-footer">
         <p class="tiny">Livro de Reclamações WhoCares disponível <b><a href="https://www.livroreclamacoes.pt/Inicio/"
               target="_blank">aqui.</a></b></p>
         <p class="tiny">Ilustração adaptada do trabalho de Tania Yakunova.
